css/main.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
@font-face {
  font-family: "SF Pro Display";
  src: url("../SF_Pro_Display/SFPRODISPLAYREGULAR.woff") format("woff"), url("../SF_Pro_Display/SFPRODISPLAYREGULAR.ttf") format("truetype"), url("../SF_Pro_Display/SFPRODISPLAYREGULAR.eot") format("embedded-opentype");
}
html {
  width: 100%;
  margin: 0 auto;
  overflow-x: hidden;
  align-items: flex-end !important;
  position: absolute;
  top: 0%;
  left: 0%;
}

body {
  background-color: #4d515c;
  display: flex;
  flex-direction: column;
  /* 毛玻璃測試用背景 */
  /*  background-image: url("../image/Rectangle.svg"); 
  height: 100%;
  background-position: center bottom;
  background-size: cover;
  background-attachment: fixed !important; */
  width: auto;
  min-width: 100%;
  margin: 0 auto;
  overflow-x: hidden;
  justify-content: space-around;
}

.background-image {
  background-image: url("../image/Rectangle.svg");
  background-position: center bottom;
  height: 100%;
  min-width: 100%;
  position: fixed;
  z-index: -3;
}

.background_test {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.background_test .air {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100px;
  background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
  background-size: 1000px 100px;
}

.background_test .air.air1 {
  -webkit-animation: wave 30s linear infinite;
          animation: wave 30s linear infinite;
  z-index: 1000;
  opacity: 1;
  -webkit-animation-delay: 0s;
          animation-delay: 0s;
  bottom: 0;
}

.background_test .air.air2 {
  -webkit-animation: wave2 15s linear infinite;
          animation: wave2 15s linear infinite;
  z-index: 999;
  opacity: 0.5;
  -webkit-animation-delay: -5s;
          animation-delay: -5s;
  bottom: 10px;
}

.background_test .air.air3 {
  -webkit-animation: wave 30s linear infinite;
          animation: wave 30s linear infinite;
  z-index: 998;
  opacity: 0.2;
  -webkit-animation-delay: -2s;
          animation-delay: -2s;
  bottom: 15px;
}

.background_test .air.air4 {
  -webkit-animation: wave2 5s linear infinite;
          animation: wave2 5s linear infinite;
  z-index: 997;
  opacity: 0.7;
  -webkit-animation-delay: -5s;
          animation-delay: -5s;
  bottom: 20px;
}

@-webkit-keyframes wave {
  0% {
    background-position-x: 0px;
  }
  100% {
    background-position-x: 1000px;
  }
}

@keyframes wave {
  0% {
    background-position-x: 0px;
  }
  100% {
    background-position-x: 1000px;
  }
}
@-webkit-keyframes wave2 {
  0% {
    background-position-x: 0px;
  }
  100% {
    background-position-x: -1000px;
  }
}
@keyframes wave2 {
  0% {
    background-position-x: 0px;
  }
  100% {
    background-position-x: -1000px;
  }
}
.test {
  position: absolute;
  top: 0;
  right: 0;
  overflow-x: hidden;
}

div {
  max-width: 100%;
}

/* 按鈕用 */
i {
  font-size: larger;
  color: #FFFFFF;
}

/* ----- 文字設定區域 ----- */
/* 普通段落文字 */
p {
  font-family: "SF Pro Display";
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 400;
  /* line-height: 2; */
  line-height: 1.8;
  text-align: left;
  margin: 0;
  letter-spacing: 0.04em;
}

/* 內文標題 */
p-t {
  font-size: 20px;
}

/* 內文小字 */
p-s {
  font-size: 12px;
}

a {
  cursor: pointer;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

/* 需要變藍色的字體可以直接用這個框 */
blue-text {
  color: #A9EEFD;
  font-weight: bold;
}

/*只有英文大標 配 中文小標*/
.T-E {
  font-family: "Righteous";
  font-size: 24px;
}

.T-C {
  font-family: "SF Pro Display";
  font-size: 16px;
}

/*只有中文大標*/
.T-T-C {
  font-family: "SF Pro Display";
  font-size: 24px;
}

/* 每個區段的大框+標題文字  */
.box {
  font-family: "Righteous";
  font-style: normal;
  color: #FFFFFF;
  margin: 10%;
}

.box .box-title {
  font-weight: 400;
  /* font-size: 32px; */
  line-height: 1.2;
  letter-spacing: -0.011em;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.46);
  margin-bottom: 7px;
}

.box .t-24 {
  font-size: 24px;
  margin-top: 16px;
}

#Apply .box {
  margin-top: 5%;
  margin-bottom: 5%;
}

/* 卡片用標題文字 */
/* t-數字 是文字大小 */
card-title {
  color: #FFFFFF;
  font-family: "SF Pro Display";
  font-style: normal;
  font-weight: 800;
  margin: 0;
}

/*手機版 t-數字 是文字大小 */
/*卡片大標*/
card-title t-20 {
  font-size: 20px;
}

/*卡片小標*/
card-title t-16 {
  font-size: 16px;
}

t-14 {
  font-size: 14px;
}

#Programs .box {
  margin-right: 0%;
}

#Programs .card_d {
  gap: 30px;
}

/* 行事曆內容用文字 */
/* 分左邊和右邊 */
.schedule-text {
  font-family: "SF Pro Display";
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  margin: 0;
}

.schedule-text .left-text {
  float: left;
  text-align: left;
}

.schedule-text .right-text {
  float: right;
  text-align: right;
}

#schedule .box {
  margin-right: 0%;
}

.schedule_box {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 18px;
  overflow-x: auto;
  -ms-scroll-snap-type: x mandatory;
  scroll-snap-type: x mandatory;
  -webkit-overflow-scrolling: touch;
  margin: 0%;
  padding-right: 10%;
}

.schedule_box::-webkit-scrollbar {
  width: 0px;
  display: none;
}

/* carousel值修改 */
#carouselPrograms {
  margin-top: 26px;
  display: none;
}

#carouselSchedule {
  display: none;
}

.carousel-control-next {
  /* margin: -12%; */
  color: #fff;
  opacity: 1;
}

.carousel-control-prev {
  /* margin: -12%; */
  color: #fff;
  opacity: 1;
}

.carousel-indicators {
  bottom: 0;
  margin: 0;
  margin-left: 2vw;
  align-items: center;
}

.carousel-indicators li {
  width: 0;
  height: 0;
  border: 0;
  margin: 0 1vw;
  border-radius: 16px;
  -webkit-backdrop-filter: blur(10px);
          backdrop-filter: blur(10px);
  color: white;
  list-style-type: circle;
  font-size: 2vw;
  cursor: pointer;
  box-shadow: 0px 0px 28px rgba(0, 0, 0, 0.25);
}

.carousel-indicators li.active {
  list-style-type: disc;
}

.card_Speaker .card_d_img {
  margin: auto;
  margin-bottom: 16px;
}
/* ... */

